Fixes for J25 styles, added some icons, improved spacing for some form elements

--- a/administrator/templates/hubbasicadmin/css/common/debug.css
+++ b/administrator/templates/hubbasicadmin/css/common/debug.css
@@ -9,7 +9,7 @@
 	div#system-debug {
 		background: #fff;
 		margin: 0;
-		padding: 1.61803399em 2.23606798em 0.61803399em 2.23606798em;
+		padding: 1.61803399em 2.23606798em 1.61803399em 2.23606798em;
 		border: none;
 		border-top: 1px solid #e9e9e9;
 		clear: both;
