--- a/administrator/templates/hubbasicadmin/css/template.css
+++ b/administrator/templates/hubbasicadmin/css/template.css
@@ -576,9 +576,17 @@
 		-o-border-radius: 0;
 		border-radius: 0;
 	}
+	label .star {
+		color: #c00;
+	}
 	.checklist li,
 	.adminformlist li {
 		margin: 0;
+		padding: .61803399em 1.61803399em;
+		border-bottom: 1px solid #e9e9e9;
+	}
+	.adminformlist li:last-child {
+		border-bottom: none;
 	}
 	.adminformlist #jform_created,
 	.adminformlist #jform_publish_up,
@@ -602,6 +610,10 @@
 		-ms-box-shadow: none;
 		-o-box-shadow: none;
 		box-shadow: none;
+	}
+	.panel .adminformlist li {
+		padding: 0;
+		border: none;
 	}
 	#adminForm table ul,
 	#adminForm table li {
@@ -1993,6 +2005,11 @@
 		padding: 0;
 		margin: 0;
 	}
+	/*fieldset.adminform>textarea ,*/
+	fieldset.adminform>label,
+	fieldset.adminform>p {
+		margin: 0.61803399em 1.61803399em;
+	}
 	fieldset fieldset fieldset {
 		background: transparent;
 		border: none;
@@ -2018,7 +2035,36 @@
 	}
 	/* Specific fieldsets */
 	fieldset.batch {
-		padding: 0 1.61803399em;
+		border: none;
+		text-align: left;
+		padding: 0 1.61803399em 1.61803399em 1.61803399em;
+		margin: 2.5em 0;
+		background: #eaeaea url("../images/layout/noise.png");
+		border: none;
+		-webkit-border-radius: 0.27em;
+		-moz-border-radius: 0.27em;
+		border-radius: 0.27em;
+		-webkit-box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(255, 255, 255, 0.4);
+		-moz-box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(255, 255, 255, 0.4);
+		box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(255, 255, 255, 0.4);
+	}
+	fieldset.batch legend {
+		color: #ddd;
+		float: left;
+		width: 100%;
+		margin: 0 -1.61803399em 1.61803399em -1.61803399em;
+		padding: 0.5em 1.61803399em;
+		font-size: 1em;
+		text-shadow: 0px -1px 2px #333;
+		-webkit-border-radius: 0.27em 0.27em 0 0;
+		-moz-border-radius: 0.27em 0.27em 0 0;
+		border-radius: 0.27em 0.27em 0 0;
+		background: #6e6e6e url("../images/nav/noise.png");
+		-webkit-box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.2);
+		-moz-box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.2);
+		box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.2);
+		zoom: 1;
+		text-indent: 0;
 	}
 	fieldset#filter,
 	fieldset#filter-bar {
